# damus

./: .envrc  .gitignore  .gitmodules  .mailmap  .mcp.json  .rgignore  ACKNOWLEDGEMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  PR_PHASE1.md  Package.resolved  Package.swift  PrivacyInfo.xcprivacy  Purple.storekit  README.md  SECURITY.md  SKILLS.md  TODO  WalletPickerView.swift  justfile  multikeyplan.md  offline-media-plan-outbox.MD  opencode.json  shell.nix  transifex.yml  tsan_suppressions.supp
.beads/: issues.jsonl  metadata.json  websocket-testing-approaches.md
.github/: pull_request_template.md
Damoose/: Damoose.entitlements  Info.plist  SafariWebExtensionHandler.swift  data.mdb  lock.mdb
DamusNostrSigner/: DamusNostrSigner.entitlements  Info.plist  SafariWebExtensionHandler.swift
DamusNotificationService/: DamusNotificationService.entitlements  NostrEventInfoFromPushNotification.swift  NotificationExtensionState.swift  NotificationFormatter.swift  NotificationService.swift  PrivacyInfo.xcprivacy
arti-mobile/: Cargo.toml
arti-mobile/include/: arti_mobile.h
arti-mobile/src/: lib.rs
ci_scripts/: ci_post_xcodebuild.sh
damus-c/: amount.c  array_size.h  bech32.c  bech32.h  bech32_mention.c  bech32_mention.h  block.h  bolt11.c  container_of.h  copy-ndb  cursor.h  damus-Bridging-Header.h  damus.c  damus.h  hash_u5.c  hex.c  hex.h  jsmn.h  likely.h  node_id.h  nostr_bech32.c  nostr_bech32.h  nostrdb.c  nostrdb.h  nostrscript.c  nostrscript.h  overflows.h  parser.h  str_block.h  take.h  tal.c  tal.h  typedefs.h  utf8.h  wasm.c  wasm.h
(+3085 files in other folders)
